Fix SonarQube issues across codebase